--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
         </aside>
         <canvas id="scene"></canvas>
     </main>
+     <script src="https://raw.githubusercontent.com/viktorcoalla/fluid/refs/heads/master/dist/main.min.js" type="text/javascript"></script>
 </body>
 
 </html>
