--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
   </style>
 </head>
 
-<body class="demo-1">
-   
-     <script src="https://raw.githubusercontent.com/viktorcoalla/fluid/refs/heads/master/dist/main.min.js" type="text/javascript"></script>
+<body>
+    <script src="https://raw.githubusercontent.com/viktorcoalla/fluid/refs/heads/master/dist/main.min.js" type="text/javascript"></script>
 </body>
 
 </html>
