--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Arno Di Nunzio" />
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="https://use.typekit.net/lma7zwj.css">
-    <link rel="stylesheet" type="text/css" href="dist/app.css" />
+    <link rel="stylesheet" type="text/css" href="app.css" />
 
     <style>
     body{
